# zbrowser

./: .gitignore  .gitmodules  README.md  package.json  vkeys.mjs  vovl.mjs  vpl.mjs  vpop.mjs  vpos.mjs  vsys.mjs  vterm.mjs  vwin.mjs
.github/workflows/: pages.yml
docs/: BUGS.md  audio-architecture.html  hud-theme.js  index.html  report.html  tutorial.css
extensions/hud-internal/: .gitignore  background.js  debug-adapter.js  hud.js  manifest.json  package.json  palette-cmds.js  redirect.js  schemes.js  theme.js  zbreak.js  zcookies.js  zexpose.js  zfind.js  zgestures.js  zkeys.js  zpalette.js  zpipes-core.js  zpowerline.js  zreader.js  zreload.js  zspatial.js  zstatus.js  ztmux-config.js  ztmux-pane.js  ztmux.js  ztriggers.js  zvim.js
extensions/hud-internal/native/: com.zbrowser.hud.json  hud_host.py
extensions/hud-internal/pages/: audio.html  audio.js  bookmarks.html  bookmarks.js  ci.html  ci.js  fzf.js  (+42 more)
fork/: README.md  args.gn  package.sh
fork/patches/: 0001-tab-shape-hud.patch  0002-ui-colors-hud.patch  0003-ui-font-mono-hud.patch  0007-devtools-hud-theme.patch  0008-tmux-split-prefix.patch  0010-newtab-force-zwire.patch  0011-pinned-extensions-always-show.patch  0012-allow-frame-src.patch  0013-default-restore-last-session.patch  0014-no-session-crashed-bubble.patch  0016-ext-private-api-allowlist.patch  0017-no-hold-to-quit.patch  0018-ext-dispatch-null-policy-container.patch  0022-audio-eq-output.patch  0023-audio-tab-capture.patch  0024-audio-live-config.patch  0025-hud-native-custom-palette.patch  README.md  series
fork/tests/: dsp_test.cpp
newtab/: background.js  manifest.json  newtab.css  newtab.html  newtab.js  palette-cmds.js  palette.js  scheme-sync.js  tmux-host.js  tmux-pane.js  tmux.html
scripts/: build.sh  bust.sh  clean.sh  cyberpunk.sh  dev.sh  fetch-base.sh  install.sh  localinstall-linux.sh  localinstall-windows.ps1  localinstall.sh  nuke.sh  rebrand-macos.sh  rebuild.sh  release-macos.sh  setup-native-host.sh  state-dir.sh  test.sh
theme/: manifest.json
(+27 files in other folders)
