# GN build args for the zwire Chromium fork.
#
# Unbranded (Chromium, not Google Chrome), release, optimized for a reasonable
# build time on a workstation. Copied into out/<dir>/args.gn by build.sh.
#
# Tune target_cpu per host (arm64 for Apple Silicon, x64 for Intel/Linux).

# --- product ---
is_chrome_branded = false          # no Google branding; ships as unbranded Chromium
is_official_build = true           # full optimization (release quality)

# --- media codecs ---
# Default Chromium ships ffmpeg_branding="Chromium" (open codecs only: VP8/VP9/
# AV1/Opus/Vorbis) and no H.264/AAC. Sites that stream H.264 — Synology
# SurveillanceStation web live-view, most IP cameras, MP4/AAC media — play in
# Google Chrome but not in a stock Chromium build. Enable the proprietary set so
# zwire decodes what Chrome does.
proprietary_codecs = true          # H.264 / AAC / MPEG in <video>/MSE
ffmpeg_branding = "Chrome"         # bundle the ffmpeg build that carries them
# H.265/HEVC is NOT software-decoded even here; Chromium routes it to the
# platform/hardware decoder (VideoToolbox on macOS). Synology gates H.265/MPEG4/
# MxPEG to its native Client regardless, so the browser never receives them.
enable_platform_hevc = true          # allow HEVC where the OS provides it
enable_platform_hevc_decoding = true # wire the platform HEVC decode path

# --- build speed / size ---
is_debug = false
is_component_build = false
symbol_level = 0                   # no debug symbols -> much faster link, smaller
blink_symbol_level = 0
chrome_pgo_phase = 0               # skip profile-guided optimization (large time sink)
enable_nacl = false                # drop legacy Native Client
use_thin_lto = false               # ThinLTO is slow; disable for iteration builds

# --- platform (SET THIS to your host) ---
target_cpu = "arm64"               # arm64 | x64

# --- dev conveniences ---
dcheck_always_on = false
